--- a/css/mirador.css
+++ b/css/mirador.css
@@ -780,10 +780,16 @@ a.map-annotate-button, a:visited.map-annotate-button, a:active.map-annotate-butt
   pointer-events: none;
 }
 
-a.mirador-icon-annotations [class^="icon-"] {
+a.mirador-icon-send-folio [class^="fa-"] {
   display:block;
   position:absolute;
 }
+
+a.mirador-icon-annotations [class^="fa-"] {
+  display:block;
+  position:absolute;
+}
+
 .mirador-viewer a.mirador-icon-annotations {
   background: none;
   color: rgb( 146, 145, 145 );
